--- a/Exo/Traccia_1-10.html
+++ b/Exo/Traccia_1-10.html
@@ -9,6 +9,7 @@ caso non usiamo i label, ma i segnaposto -->
 <title>Traccia 10</title>
 </head>
 <body>
+
     <style>
         body {
             background-color: #14aab4;
@@ -26,23 +27,239 @@ caso non usiamo i label, ma i segnaposto -->
             font-size: 20px;
             text-align: center;
         }
-        a {
+        input {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        select {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+       .form-check-input {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        label {
             color: #f5f5f5;
             font-family: "Times New Roman", Times, serif;
             font-size: 20px;
             text-align: center;
         }
+        textarea {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        .btn {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        /* Basic styling */
+* {
+    box-sizing: border-box;
+    padding: 1%;
+    margin: 5px;
+  }
+  body {
+    font-family: sans-serif;
+  }
+  nav {
+    background: #1285b3;
+    padding: 5px 20px;
+  }
+  ul {
+    list-style-type: none;
+  }
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  .logo a:hover {
+    text-decoration: none;
+  }
+  .menu li {
+    font-size: 16px;
+    padding: 15px 5px;
+    white-space: nowrap;
+  }
+  .logo a,
+  .toggle a {
+    font-size: 20px;
+  }
+  .button.secondary {
+    border-bottom: 1px #444 solid;
+  }
+  
+  /* Mobile menu */
+  .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .toggle {
+    order: 1;
+  }
+  .item.button {
+    order: 2;
+  }
+  .item {
+    width: 100%;
+    text-align: center;
+    order: 3;
+    display: none;
+  }
+  .item.active {
+    display: block;
+  }
+  
+  /* Navbar Toggle */
+  .toggle {
+    cursor:pointer;
+  }
+  .bars {
+    background: #999;
+    display: inline-block;
+    height: 2px;
+    position: relative;
+    transition: 2s ease-out;
+    width: 18px;
+  }
+  .bars:before,
+  .bars:after {
+    background: #999;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+  }
+  .bars:before {
+    top: 5px;
+  }
+  .bars:after {
+    top: -5px;
+  }
+  
+  /* Tablet menu */
+  @media all and (min-width: 468px) {
+    .menu {
+        justify-content: center;
+    }
+  
+    .logo {
+        flex: 1;
+    }
+  
+    .item.button {
+        width: auto;
+        order: 1;
+        display: block;
+    }
+    .toggle {
+        order: 2;
+    }
+    .button.secondary {
+        border: 0;
+    }
+    .button a {
+        padding: 7.5px 15px;
+        background: teal;
+        border: 1px #006d6d solid;
+        border-radius:50em;
+    }
+    .button.secondary a {
+        background: transparent;    
+    }
+    .button a:hover {
+        text-decoration: none;
+        transition:all .25s;
+    }
+    .button:not(.secondary) a:hover {
+        background: #006d6d;
+        border-color: #005959;
+    }
+    .button.secondary a:hover {
+        color: #ddd;
+    } 
+  }
+  
+  /* Desktop menu */
+  @media all and (min-width: 768px) {
+    .item {
+        display: block;
+        width: auto;
+    }
+    .toggle {
+        display: none;
+    }
+    .logo {
+        order: 0;
+    }
+    .item {
+        order: 1;
+    }
+    .button {
+        order: 2;
+    }
+    .menu li {
+        padding: 15px 10px;
+    }
+    .menu li.button {
+        padding-right: 0;
+    }
+  } 
     </style>
+  <nav>
+    <ul class="menu">
+        <li class="logo"><a href="#">SergeGuea</a></li>
+        <li class="item"><a href="#">Home</a></li>
+        <li class="item"><a href="#">About</a></li>
+        <li class="item"><a href="#">Services</a></li>
+        </li>
+        <li class="item button"><a href="#">Log In</a></li>
+        <li class="item button secondary"><a href="#">Sign Up</a></li>
+        <li class="toggle"><span class="bars"></span></li>
+    </ul>
+</nav>
 <u><h1>Documento 10</h1> </u>
-<p> In questo paragrafo  troverete il mio form </p>
-<form action="action_page.php">
+<p> In questo paragrafo  troverete il mio form </p> <br>
+<form>
   <input type="text" id="fname" name="fname" placeholder="Nome"><br>
   <input type="text" id="lname" name="lname" placeholder="Cognome"><br>
   <input type="text" id="email" name="email" placeholder="Email"><br>
   <input type="text" id="message" name="message" placeholder="Messaggio"><br>
   <select name="tendina" id="tendina">
     <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
+    <option value="saab">Bmw</option>
     <option value="mercedes">Mercedes</option>
     <option value="audi">Audi</option>
   </select>
