--- a/Exo/Traccia_1-9.html
+++ b/Exo/Traccia_1-9.html
@@ -25,7 +25,25 @@ indirizzo email, una password, un messaggio e una tendina con tre scelte. -->
             font-size: 20px;
             text-align: center;
         }
-        a {
+        input {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        select {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+            background-color: #14aab4;
+            border: 2px solid #f5f5f5;
+            border-radius: 4px;
+        }
+        label {
             color: #f5f5f5;
             font-family: "Times New Roman", Times, serif;
             font-size: 20px;
@@ -33,8 +51,8 @@ indirizzo email, una password, un messaggio e una tendina con tre scelte. -->
         }
     </style>
 <u><h1>Documento 10</h1> </u>
-<p> In questo paragrafo  troverete il mio form </p>
-<form action="action_page.php">
+<p> In questo paragrafo  troverete il mio form </p> <br>
+<form style="text-align: center">
   <label for="fname">Nome:</label><br>
   <input type="text" id="fname" name="fname" placeholder="Nome"><br>
   <label for="lname">Cognome:</label><br>
