--- a/Exo/Traccia_1-3.html
+++ b/Exo/Traccia_1-3.html
@@ -8,9 +8,19 @@ importanti, una parte di testo evidenziata e una parte di testo con una barra di
 <title>Traccia 3</title>
 </head>
 <body>
-<h1>Documento con il paragrafo</h1>
-<h2> La pace</h2>
- <p>la pace in ogni<strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
+<style>
+    h1 , h2 {
+        text-align: center;
+        color:rgb(144, 127, 255);
+    }
+body {
+    background-color:beige;
+}
+
+</style>
+<u><h1 style="text-align:center;">Documento 3</h1></u>
+<u><h2 style="text-align:center;" > La pace</h2></u>
+<p>la pace in ogni<strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
  <em>facciamo un girotondo portando la pace </em> in <em><strong>tutto il mondo.</strong></em>. <br>
 <mark>tutto il mondo.</mark> i <br> popoli della Terra: <del>vogliamo la pace e non la guerra! </del> <br>
 </p>
