--- a/Exo/Traccia_1-4.html
+++ b/Exo/Traccia_1-4.html
@@ -8,9 +8,21 @@ che del testo, rosso.-->
 <title>Traccia 4</title>
 </head>
 <body>
-<h1 style="color:red">Documento con il paragrafo</h1>
-<h2 style="color:red"> La pace</h2>
-<p style="color:rgb(60, 255, 0)">la pace in ogni<strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
+<style>
+body {
+background-color: #14aab4;
+}
+h1 , h2 {
+    text-align: center;
+}
+u {
+    color: #e6f7d6 ;
+}
+
+</style>
+<u><h1 style="color:red">Documento 4</h1></u>
+<u><h2 style="color:white"> La pace</h2></u>
+<p style="color:rgb(255, 0, 0)">la pace in ogni<strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
 <em>facciamo un girotondo portando la pace </em> in <em><strong>tutto il mondo.</strong></em>. <br>
 i <br> popoli della Terra: <del>vogliamo la pace e non la guerra! </del> <br>
 </body>
