--- a/Exo/Traccia_1-6.html
+++ b/Exo/Traccia_1-6.html
@@ -10,7 +10,7 @@ che definisce una citazione, unâ€™abbreviazione, un indirizzo e un titolo di unâ
 <body>
     <style>
         body {
-            background-color: #142cb4;
+            background-color: #1479b4;
  
         }
         h1 {
