--- a/Exo/Traccia_1-7.html
+++ b/Exo/Traccia_1-7.html
@@ -30,12 +30,14 @@ del browser.-->
             font-size: 20px;
             text-align: center;
         }
+        u {
+            color: #b4b40d;      
+         }
     </style>
 <u><h1>Documento 7</h1> </u>
 <p>Una persona in mezzo alla pace indossa una corona di speranza.<br> Un uomo in pace ha sempre un sorriso dopo tutte le guerre a chi glielo chiede.<br>
 Il fuoco fecondo delle particelle delle mani e delle parole, il fuoco della gioia arde e ogni cuore si scalda. <br>
- La vittoria dipende dalla fratellanza. Non c'è limite alla crescita. Ciascuno sarà...
-</p>
+ La vittoria dipende dalla fratellanza. Non c'è limite alla crescita. Ciascuno sarà...</p>
 <a href="https://mac.orared.com/" target="_blank">Mac</a>
 </body>
 </html>
