--- a/Exo/Traccia_1-5.html
+++ b/Exo/Traccia_1-5.html
@@ -7,9 +7,59 @@ che di una porzione del testo, rosso.-->
     <title>Traccia 5</title>
 </head>
 <body>
-    <h1 style="color:red">Documento con il paragrafo</h1>
-    <h2 style="color:rgb(0, 47, 255)"> La pace</h2>
-    <p style="color:rgb(255, 0, 0)">la pace in ogni<strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
+    <style>
+        body {
+            background-color: #14aab4;
+        }
+        h1 {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 50px;
+            text-align: center;
+        }
+        h2 {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 30px;
+            text-align: center;
+        }
+        p {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        strong {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        em {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        del {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        i {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 20px;
+            text-align: center;
+        }
+        u {
+            color: #021608 ;
+        }
+    </style>
+   <u><h1 style="color:red">Documento 5</h1></u>
+    <u><h2 style="color:rgb(0, 47, 255)"> La pace</h2></u>
+    <p style="color:rgb(255, 0, 0)">la pace in ogni <strong>paese</strong> paese, <strong><em> vogliamo la pace e le mani tese</em></strong>.<br>,
     <em>facciamo un girotondo portando la pace </em> in <em><strong>tutto il mondo.</strong></em>. <br>
     i <br> popoli della Terra: <del>vogliamo la pace e non la guerra! </del> <br>
     </body>
