--- a/Exo/Traccia_1-9.html
+++ b/Exo/Traccia_1-9.html
@@ -49,10 +49,18 @@ indirizzo email, una password, un messaggio e una tendina con tre scelte. -->
             font-size: 20px;
             text-align: center;
         }
+        fieldset {
+            color: #f5f5f5;
+            font-family: "Times New Roman", Times, serif;
+            font-size: 30px;
+            text-align: left 20px 20px 20px;
+        }
     </style>
 <u><h1>Documento 10</h1> </u>
 <p> In questo paragrafo  troverete il mio form </p> <br>
 <form style="text-align: center">
+    <fieldset>
+    <legend>Informazioni personali</legend>
   <label for="fname">Nome:</label><br>
   <input type="text" id="fname" name="fname" placeholder="Nome"><br>
   <label for="lname">Cognome:</label><br>
@@ -64,6 +72,7 @@ indirizzo email, una password, un messaggio e una tendina con tre scelte. -->
   <label for="message">Messaggio:</label><br>
   <input type="text" id="message" name="message" placeholder="Messaggio"><br>
   <label for="tendina">Tendina:</label><br>
+</fieldset>
   <select name="tendina" id="tendina">
     <option value="volvo">Volvo</option>
     <option value="saab">Bmw</option>
