--- a/Exo/Traccia_1-10.html
+++ b/Exo/Traccia_1-10.html
@@ -88,7 +88,7 @@ caso non usiamo i label, ma i segnaposto -->
     font-family: sans-serif;
   }
   nav {
-    background: #1285b3;
+    background:black;
     padding: 5px 20px;
   }
   ul {
@@ -177,6 +177,7 @@ caso non usiamo i label, ma i segnaposto -->
   
     .logo {
         flex: 1;
+      
     }
   
     .item.button {
@@ -241,9 +242,9 @@ caso non usiamo i label, ma i segnaposto -->
   <nav>
     <ul class="menu">
         <li class="logo"><a href="#">SergeGuea</a></li>
-        <li class="item"><a href="#">Home</a></li>
-        <li class="item"><a href="#">About</a></li>
-        <li class="item"><a href="#">Services</a></li>
+        <li class="item button"><a href="#">Home</a></li>
+        <li class="item button"><a href="#">About</a></li>
+        <li class="item button"><a href="#">Services</a></li>
         </li>
         <li class="item button"><a href="#">Log In</a></li>
         <li class="item button secondary"><a href="#">Sign Up</a></li>
