--- a/Exo/Traccia_1-7.html
+++ b/Exo/Traccia_1-7.html
@@ -38,6 +38,6 @@ del browser.-->
 <p>Una persona in mezzo alla pace indossa una corona di speranza.<br> Un uomo in pace ha sempre un sorriso dopo tutte le guerre a chi glielo chiede.<br>
 Il fuoco fecondo delle particelle delle mani e delle parole, il fuoco della gioia arde e ogni cuore si scalda. <br>
  La vittoria dipende dalla fratellanza. Non c'è limite alla crescita. Ciascuno sarà...</p>
-<a href="https://mac.orared.com/" target="_blank">Mac</a>
+<a href="https://mac.orared.com/" target="_new">Mac</a>
 </body>
 </html>
