--- a/Html-css/Exo2/traccia10/index.html
+++ b/Html-css/Exo2/traccia10/index.html
@@ -27,13 +27,5 @@ bianco, in corsivo e centrato. Usa stile esterno.-->
             </div>
         </div>
     </section>
-    <div class="container">
-        <img src="m01.jpeg" alt=" pc">
-        <div class="red">
-            <p>BOX</p>
-        </div>
-        <div class="green">
-            <p>BOX</p>
-        </div>
-
+</body>
 </html>
