--- a/Html-css/Exo2/traccia4/index.html
+++ b/Html-css/Exo2/traccia4/index.html
@@ -13,5 +13,5 @@ Usa stile esterno-->
     <u><h1>Traccia 4</h1></u>
     <p>Questo è mio link esterno</p>
 
-    <a href="https://www.google.com" target="_blank">Google</a>
+    <a href="https://www.google.com" target="_new">Google</a>
 </html>
