--- a/Blog-serge/MyBlog /contact.html
+++ b/Blog-serge/MyBlog /contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="it"> 
 <head>
-    <title>Blog Template</title>
+    <title>My Blog</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Blog Site Template">   
+    <meta name="description" content="My Blog ">   
     <link rel="shortcut icon" href="images/blog-logo.png"> 
     
     <!-- FontAwesome CSS-->
@@ -51,11 +51,10 @@
 				</ul>
 				<hr>
 				<ul class="social-list list-inline py-3 mx-auto">
-					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i>sergeguea</a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i>sergeguea</a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i>SERGE3-g</a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i>sergeguea </a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw">sergeguea</i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i> SERGE3-g</a></li>
 					<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i>serge-guea</a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
 				</ul>
 
 			</div>
@@ -72,7 +71,7 @@
 					<div class="form-group">
 					  <label for="exampleInputEmail1">Email address</label>
 					  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-					  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					  <small id="emailHelp" class="form-text text-muted">Non condivideremo mai la tua email con nessun altro.</small>
 					</div>
 					<div class="form-group">
 					  <label for="exampleMessage">Message</label>
