--- a/Blog-serge/MyBlog /post.html
+++ b/Blog-serge/MyBlog /post.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 
 <head>
-	<title> My Blog </title>
+	<title>Blog</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -57,11 +57,10 @@
 				</ul>
 				<hr>
 				<ul class="social-list list-inline py-3 mx-auto">
-					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i>sergeguea </a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw">sergeguea</i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw">SERGE3-g</i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw">serge-guea</i></a></li>
 				</ul>
 
 			</div>
@@ -70,7 +69,7 @@
 
 	<div class="main-wrapper">
 		<header class="page-title theme-bg-light text-center gradient py-5">
-			<h1 class="heading">Blog Page Title About Blogging</h1>
+			<h1 class="heading">My first Blog </h1>
 		</header>
 		<article class="content px-3 py-5 p-md-5">
 			<div class="container">
@@ -376,5 +375,4 @@
 	<script src="js/main.js"></script>
 
 </body>
-
 </html>
