--- a/Blog-serge/MyBlog /page.html
+++ b/Blog-serge/MyBlog /page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Blog Template</title>
+    <title> My Blog</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,11 +51,10 @@
 				</ul>
 				<hr>
 				<ul class="social-list list-inline py-3 mx-auto">
-					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"> sergeguea</i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i>sergeguea </a></li>
 					<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw">sergeguea</i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw">SERGE3-g</i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw">serge-guea</i></a></li>
-					<li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i> SERGE3-g</a></li>
+					<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i>serge-guea</a></li>
 				</ul>
 
 			</div>
