--- a/HTML-CSS-AV/Traccia_1/index.html
+++ b/HTML-CSS-AV/Traccia_1/index.html
@@ -1,23 +1,21 @@
 <!--Creare un documento con un elenco puntato, con ogni elemento senza il simbolo
 dei punti e affiancati l’un l’altro. Usa lo stile esterno.  -->
 
-
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <title>traccia1</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="traccia1.css">
-    </head>
-    <body>
-        
-        <ul>
-            <li>elemento1</li>
-            <li>elemento2</li>
-            <li>elemento3</li>
-            <li>elemento4</li>
-            <li>elemento5</li>
-        </ul>
-    </body>
+  <head>
+    <title>traccia1</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="traccia1.css" />
+  </head>
+  <body>
+    <ul>
+      <li>elemento1</li>
+      <li>elemento2</li>
+      <li>elemento3</li>
+      <li>elemento4</li>
+      <li>elemento5</li>
+    </ul>
+  </body>
 </html>
