--- a/Project js/Code/oggetti/index.html
+++ b/Project js/Code/oggetti/index.html
@@ -23,7 +23,7 @@
             position: relative;
             display: inline-block;
             padding: 10px 20px;
-            color: #fff;
+            color: #292424;
             text-decoration: none;
             text-transform: uppercase;
             overflow: hidden;
