--- a/Project js/Code/oggettoEvent/index.html
+++ b/Project js/Code/oggettoEvent/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div style="width: 1000px; height: 1000px; background-color: black;">
+    <div style="width: 1000px; height: 1000px; background-color: rgb(116, 154, 168);">
         <form action="www.google.it">
             <button type="submit">cliccami</button>
         </form>
